# HSE_MLDS_project_year1

./: .env  .gitignore  Data_describing.ipynb  Dockerfile  Dockerfile_prod  Makefile  README.md  README_Service_instruction.md  dashboard.yml  datasource.yml  docker-compose.yml  my_utils_test.ipynb  prometheus.yml  pyproject.toml  requirements.txt
checkpoint1/: README.md  project_plan
checkpoint2/: Data_describing.ipynb
checkpoint3/: Mystem_and_bag_of_words.ipynb  Project_part2_v02_without_speller_final.ipynb
checkpoint4/: ML_models_catboost_fulldf.ipynb  README.md
checkpoint5/: ML_catboost_2models.ipynb  ML_catboost_optuna.ipynb  README.md  Random_forest_optuna_reduce_feature.ipynb  Text_classification_StackingClassifier_ipynb_.ipynb  feature_engineering.py  lemmatization.py  model.py
checkpoint5/final_model/: feature_engineering.py  lemmatization.py  model.py  train.py
chekpoint3/: Mystem_and_bag_of_words.ipynb
final pipeline/: Makefile  model.py  requirements.txt  test.py  train.py
final_pipeline/: feature_engineering.py  lemmatization.py  model.py  test.py  train.py
models/: ML_models_catboost_fulldf_final_GPU.ipynb
parsing/: download_lenta.py
project plan/: README.md
service/: .gitignore  Dockerfile  README.md  analysing.py  db.sql  db_api.py  feature_engineering.py  lemmatization.py  main.py  metrics.py  model.py  monitoring.py  requirements.txt  test.py  utils.py
service_independant_launch/: Dockerfile  README.md  analysing.py  feature_engineering.py  main.py  model.py  pyproject.toml  requirements.txt  setup.cfg  test.py
(+33 files in other folders)
